style.css
/* ... */
.wrap__form__1 {
  width: 100%;
  height: 350px;
  background-color: rgb(51, 49, 49);
  display: flex;
  align-items: center;
  justify-content: center;
}
.wrap__content__form__1 {
  max-width: 1200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.form__1__title {
  font-size: 40px;
  color: white;
  margin-top: 0px;
}
.form__1__text {
  margin-top: -70px;
  color: white;
}
.form__1 {
  margin-top: 5px;
}
.form__1__email {
  outline: none;
  border: 2px solid white ;
  border-radius: 5px;
  width: 400px;
  height: 50px;
  font-size: 13px;
  padding-top: 10px;
  padding-left: 15px;
  padding-bottom: 10px;
  margin-right: 20px;
  
}
.form__1__button__size {
  width: 180px;
}

/* БЛОК ФОРМЫ 2 */

.wrap__form__2 {
  width: 100%;
  position: relative;
}

.wrap__content__form__2 {
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
  margin-top: 70px;
}
.p-form__2 {
  margin-top: 10px;
}
.wrap__block__form__2 {
  width: 100%;
  display: flex;
  gap: 70px;
  position: relative;
}

.wrap__element__form__2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 40px;
}
.form__2__line__1 {
  width: 100%;
  display: flex;
  gap: 30px;

}
.form__2 {
  border: 2px solid rgb(238, 238, 238);
  border-radius: 5px;
  background-color: rgb(238, 238, 238);
  resize: none;
  padding-top: 10px;
  padding-left: 15px;
  padding-bottom: 10px;
  outline: none;

}
.form__2__size {
  width: 50%;
  height: 40px;

}
.form__2__button__size {
  width: 100%;
  height: 40px;
  margin-top: 0px;
}

.block__contact__info{
  position: absolute;
  right: -157px;
  height: 100%;
  width: 40%;
  background-color: rgb(26, 25, 25);
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 20px;
  padding-left: 40px;
}
.contact__info__title {
  color: white;
  font-size: 15px;
  text-transform: uppercase;
  margin: 0px;
}
.contact__info__address {
  color: grey;
}
.contact__info__mail {
  text-transform: lowercase;
  color: grey;
}
.contact__info__phone {
  color: grey;
}

/* ПОДВАЛ БЛОК*/

.footer__bottom {
  width: 100%;
  height: 70px;
  background-color: rgb(26, 25, 25);
  margin-top: 90px;
  display: flex;
  align-items: center;
  justify-content: space-around;
}
.footer__bottom__text {
  color: grey;
}
.footer__bottom__img {
  width: 30px;
  height: 30px;
  transition: 0.4s;
}
.footer__bottom__img:hover {
  transform: rotate(30deg);
  width: 40px;
  height: 40px;
}
.footer__bottom__img:active {
  transform: rotate(0deg);
  width: 20px;
  height: 20px;
}

/* БЛОК СТРЕЛКИ ВВЕРХ ВНИЗ */

.background__arrow__top {
  position: fixed;
  top: 10%;
  right: 5%;
  width: 50px;
  height: 55px;
  background-color: rgba(222, 86, 86, 0);
  border-radius: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: 0.6s;
}
.background__arrow__top:hover {
  background-color: rgba(222, 86, 86, 0.268);
}
.arrow__top {
  position: absolute;
  top: 22px;
  width: 30px;
  height: 30px;
  border-top: 3px solid rgb(222, 86, 86);
  border-left: 3px solid rgb(222, 86, 86);
  transform: rotate(45deg);
  z-index: 100;
}
.background__arrow__bottom {
  position: fixed;
  bottom: 10%;
  right: 5%;
  width: 50px;
  height: 55px;
  background-color: rgba(222, 86, 86, 0);
  border-radius: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: 0.6s;
}
.background__arrow__bottom:hover {
  background-color: rgba(222, 86, 86, 0.268);
}
.arrow__bottom {
  position: absolute;
  bottom: 22px;
  width: 30px;
  height: 30px;
  border-right: 3px solid rgb(222, 86, 86);
  border-bottom: 3px solid rgb(222, 86, 86);
  transform: rotate(45deg);
  z-index: 100;
}
.arrow__top:hover {
  border-top: 3px solid rgb(255, 0, 0);
  border-left: 3px solid rgb(255, 0, 0);
  cursor: pointer;
}
.arrow__bottom:hover {
  border-right: 3px solid rgb(255, 0, 0);
  border-bottom: 3px solid rgb(255, 0, 0);
  cursor: pointer;
}
.arrow__top__a {
  color: rgba(238, 140, 12, 0);
  transform: rotate(-45deg);
  margin-left: -15px;
  margin-top: -10px;
  font-size: 25px;
}
.arrow__bottom__a {
  color: rgba(138, 84, 13, 0);
  transform: rotate(-45deg);
  margin-left: -10px;
  margin-top: 25px;
  font-size: 20px;
}


/* ЗАГРУЗОЧНЫЙ ЭКРАН */

/* .preloader {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.9);
  position: fixed;
  z-index: 99;
  display: flex;
  align-items: center;
  justify-content: center;
  animation: preloader 1s linear forwards ;
  animation-delay: 5s;
}
.loader {
  border: 16px solid #f3f3f3;
  border-top: 16px solid rgb(255, 0, 0); 
  border-radius: 50%;
  width: 120px;
  height: 120px;
  animation: spin 1s linear infinite;
}
@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}
@keyframes preloader {
  
  to {
    z-index: -999;
    width: 0%;
    height: 0%;
  }
} */

/* СТИЛЬ ПОЛОСЫ ПРОКРУТКИ */

::-webkit-scrollbar {
  width: 0;
}

#scroll {
  overflow-y: scroll;
}
#scroll::-webkit-scrollbar {
  width: 7px;
  background-color: rgba(222, 86, 86, 0.689);
}
#scroll::-webkit-scrollbar-thumb {
  background-color: rgb(255, 0, 0);
}

